Fixed Home page on smaller screens

--- a/client/public/css/main.css
+++ b/client/public/css/main.css
@@ -1,5 +1,6 @@
 body {
   display: flex;
+  min-height: 100vh;
   flex-direction: column;
 }
 
@@ -30,8 +31,8 @@ width: 35px;
 
 #scroll {
   margin-top: 20px;
-  max-width: auto;
-  max-height: auto;
+  max-width: 100%;
+  max-height: 100%;
   -webkit-filter: brightness(100%);
 }
 
